<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen200dp"
        android:padding="@dimen/dimen10dp"
        android:orientation="vertical"
        android:background="@color/biru">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/dimen100dp"
            android:layout_height="@dimen/dimen100dp"
            android:layout_gravity="center"
            android:src="@drawable/ihsan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_nama"
            android:layout_gravity="center"
            android:text="@string/default_name"
            android:textSize="@dimen/textdimen16sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_jabatan"
            android:layout_gravity="center"
            android:text="@string/jabatan"
            android:textSize="@dimen/textdimen16sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_logout"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dimen15dp"
            android:text="@string/logout"
            android:textSize="@dimen/textdimen16sp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/backgroud">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen10dp"
            android:background="@color/whitetrans">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:padding="@dimen/dimen5dp">
                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/dimen120dp"
                    android:layout_height="@dimen/dimen120dp"
                    android:id="@+id/cv_profile"
                    android:layout_marginRight="@dimen/dimen10dp"
                    android:innerRadius="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/dimen40dp"
                            android:layout_height="@dimen/dimen40dp"
                            android:src="@drawable/ic_avatar"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile"
                            android:layout_marginTop="@dimen/dimen5dp"
                            android:textColor="@color/biru"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="@dimen/dimen120dp"
                    android:layout_height="@dimen/dimen120dp"
                    android:id="@+id/cv_history"
                    android:layout_marginLeft="@dimen/dimen10dp"
                    android:innerRadius="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/dimen40dp"
                            android:layout_height="@dimen/dimen40dp"
                            android:src="@drawable/ic_history"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/history"
                            android:layout_marginTop="@dimen/dimen5dp"
                            android:textColor="@color/biru"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:layout_width="@dimen/dimen120dp"
                android:layout_height="@dimen/dimen120dp"
                android:id="@+id/cv_absen"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen10dp"
                android:innerRadius="8dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="@dimen/dimen40dp"
                        android:layout_height="@dimen/dimen40dp"
                        android:src="@drawable/ic_absen"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/absen"
                        android:layout_marginTop="@dimen/dimen5dp"
                        android:textColor="@color/biru"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/result"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absen"
                android:layout_marginTop="@dimen/dimen5dp"
                android:textColor="@color/biru"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>