<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whitetrans"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen30dp"
                android:textColor="@color/biru"
                android:text="@string/egs_absen"
                android:layout_marginBottom="@dimen/dimen30dp"
                />
            <LinearLayout
                android:layout_width="@dimen/dimen250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dimen10dp">

                <ImageView
                    android:layout_width="@dimen/dimen30dp"
                    android:layout_height="@dimen/dimen30dp"
                    android:src="@drawable/ic_user" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"

                    android:layout_height="@dimen/dimen40dp"
                    android:backgroundTint="@color/biru" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dimen10dp">

                <ImageView
                    android:layout_width="@dimen/dimen30dp"
                    android:layout_height="@dimen/dimen30dp"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen40dp"
                    android:backgroundTint="@color/biru" />
            </LinearLayout>
            <Button
                android:layout_width="@dimen/dimen250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle_biru"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dimen10dp"
                android:textSize="@dimen/textdimen14sp"/>
            <Button
                android:layout_width="@dimen/dimen250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_password"
                android:text="@string/buat_password"
                android:textColor="@color/biru"
                android:layout_marginTop="@dimen/dimen10dp"
                android:textSize="@dimen/textdimen14sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>