<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ba"
    >

    <LinearLayout
        android:background="@color/whitetrans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:src="@drawable/logo"
            android:id="@+id/img_login"
            android:layout_width="@dimen/dimen150dp"
            android:layout_height="@dimen/dimen150dp"
            android:layout_marginTop="@dimen/dimen50dp"
            android:layout_marginBottom="@dimen/dimen30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="@dimen/dimen300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NIK/Email"
                    android:layout_marginRight="@dimen/dimen30dp"/>

                <EditText
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="NIK/Email"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/dimen10dp"
                android:layout_width="@dimen/dimen300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginRight="@dimen/dimen30dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen30dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login"/>

                <TextView
                    android:layout_below="@id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lupa_password"
                    android:textColor="@color/biru"/>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>